# librime-python

./: .gitignore  CMakeLists.txt  README.md  action-install.sh  librime-python.nix
examples/: advanced_demo.py  charset.py  colemak.py  complex.py  datetime.py  engine_demo.py  putonghua_cloud_input.py  segmentor_demo.py  translator_generator.py
src/: module.cc  opencc.cc  python_filter.cc  python_filter.h  python_gears.cc  python_gears.h  python_processor.cc  python_processor.h  python_segmentor.cc  python_segmentor.h  python_translator.cc  python_translator.h  types.cc  types_ext.cc
